--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.180.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5"
   }
 }
