--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@motionone/utils": "^10.16.3",
     "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
+    "gsap": "^3.13.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.93.3",
     "styled-components": "^6.1.0",
     "three": "^0.180.0"
   },
