--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
     "gsap": "^3.13.0",
-    "next": "13.5.4",
+    "next": "^16.0.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.93.3",
@@ -21,7 +21,7 @@
     "three": "^0.180.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^24.10.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.180.0",
@@ -30,6 +30,6 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
