--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^16.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sass": "^1.93.3",
     "styled-components": "^6.1.0",
     "three": "^0.180.0"
