--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@studio-freight/react-lenis": "^0.0.36",
     "framer-motion": "^10.16.4",
     "gsap": "^3.13.0",
-    "next": "^16.0.1",
+    "next": "16.0.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
